[package]
name = "mermaid-beans"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
reqwest = { version = "0.12.5", default-features = false, features = [
    "default-tls",
    "blocking",
] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
